# editor

./: .gitignore  CONFIGURATION_OVERRIDE_GUIDE.md  DebugXml.java  JsonInPlaceEditor.java  LICENSE  README.md  README_FIX_COMPARISON.md  build_log.txt  debug_gbk.java  debug_gbk_path.java  debug_output.txt  mkdocs.yml  pom.xml  test_output.txt
dags/: Jenkinsfile  remote_script_json_loader.py
dags/common/: config_loader.py  dag_factory.py  field_schema.py  kerberos_pod.py  remote_command.py  remote_script_workflow.py  reporting_workflow.py  ssh_hook.py  ssh_utils.py  systemd_workflow.py  trading_calendar.py  trading_day_tasks.py
dags/configs/: runtime_envs.json  systemd_topologies.json
dags/reporting/: recon_report_a.json  recon_report_a.py  recon_report_b.json  recon_report_b.py  tds_reporter.json
dags/reporting/configs/: recon_report_a.json  recon_report_b.json  target_hosts.json
dags/systemd/: market_data_common.py  market_data_start.py  market_data_stop.py  trading_platfomr_common.py  trading_platform_common.py  trading_platform_start.py  trading_platform_stop.py
dags/tests/: test_dag_syntax.py  test_dagbag_import.py  test_remote_command.py  test_reporting_workflow_prefix_merge.py
docker/: Dockerfile  docker-compose.yml
docs/: fix-eod-recon.md  index.md  operational-runbook.md
docs/java-remote-config-collector/: README.md
k8s/base/: cronjob.yaml  enter.yaml  kustomization.yaml  serviceaccount.yaml
k8s/overlays/: kustomization.yaml  overlay.yaml  prod.yaml
reporting_web/: AGENTS.md  build.gradle  tds.properties.example
reporting_web/cmake/: PrepareTdsSdk.cmake
reporting_web/docs/operations/: reporting-web-runbook.md
reporting_web/docs/technical/: tds-native-integration-reference.md
reporting_web/jenkins/: Jenkinsfile.pr  Jenkinsfile.release  reporting_web_common.groovy
reporting_web/openspec/: project.md
reporting_web/openspec/changes/define-tds-native-query-api/: design.md  proposal.md  tasks.md
reporting_web/openspec/changes/define-tds-native-query-api/specs/client-query-ui/: spec.md
reporting_web/openspec/changes/define-tds-native-query-api/specs/tds-client-query/: spec.md
reporting_web/src/main/resources/: application.yml
reporting_web/src/main/resources/static/: app.js
reports/html/: diff-report.html
reports/json/: diff-report.json
reports/junit/: TEST-diff-report.xml
scripts/: Measure-FixAndExecIdLatency.ps1  Measure-FixComponentLatency.ps1  README.md  advanced-fix-fetcher.ps1  capture.linux.sh  capture_windows.ps1  collect_linux_metrics.sh  collect_windows_metrics.ps1  config.json  export_windows_with_tshark.ps1  fetch-fix-files.bat  fetch-remote-fix-files.ps1  fix-file-examples.ps1  run-comparison.sh  run-with-overrides-example.sh  simple-fix-file-fetcher.ps1
src/main/java/org/example/: DBRepository.java  EnvironmentMapper.java  FileMasker.java  IniInPlaceEditor.java  JsonFileComparator.java  JsonInPlaceEditor.java  PropertiesInPlaceEditor.java  TextInPlaceEditor.java  XmlInPlaceEditor.java  YamlInPlaceEditor.java  backup1.java  yamlbackup
src/main/java/org/example/comparison/: FixLogComparisonApplication.java
src/main/java/org/example/remotefetch/: CommandExecutor.java  DownloadResult.java  ExampleUsage.java  ExecResult.java  FetchMode.java  FetchResult.java  OpenSshFileFetcher.java  ProcessBuilderConfigCollector.java  ProcessBuilderRemoteFileFetcher.java  ProcessCommandExecutor.java  RemoteAuthMode.java  RemoteFetchRequest.java  RemoteFileTask.java  RemoteInputStream.java  RemoteOs.java  RemotePathMapper.java  RemotePlatform.java  RemoteSearchTask.java  RemoteServer.java  SftpConfigCollector.java  SshTarget.java
src/main/resources/: application-dev.yml  application-docker.yml  application-test.yml  application.yml
src/test/java/org/example/: EnvironmentMapperTest.java  FileMaskerTest.java  IniInPlaceEditorAllTest.java  JsonFileComparatorTest.java  JsonInPlaceEditorCombinedTest.java  JsonInPlaceEditorTest.java  LocatorDebugTest.java  PropertiesInPlaceEditorCombinedTest.java  TextInPlaceEditorCombinedTest.java  XmlInPlaceEditorCombinedTest.java  XmlInPlaceEditorTest.java  YamlInPlaceEditorCombinedTest.java  YamlInPlaceEditorTest.java
src/test/java/org/example/comparison/: FixLogComparisonApplicationTest.java
src/test/java/org/example/remotefetch/: OpenSshFileFetcherTest.java  (+4 more)
tds/: windows_login_smoke.cpp
tds/docs/: tds_api.md
tds/examples/: tds_api_demo.cpp
tds/include/: tds_api.h  tds_api_define.h  tds_api_error.h  tds_api_struct_type.h
tds_reporter/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  tds-sdk.properties.example  tds.properties.example
tds_reporter/backup/: tds_client_dynamic_backup.cpp
tds_reporter/cmake/: PrepareTdsSdk.cmake
tds_reporter/config/: dev.properties  prod.properties  prod.properties.template  qa.properties  report.properties  report.properties.template  tds_reporter.properties.template
tds_reporter/docs/: code_explanation.md
tds_reporter/jenkins/: Jenkinsfile.pr  Jenkinsfile.release  report_common.groovy
tds_reporter/scripts/: build-run-installer.sh  render-config.ps1  render-config.sh  report-installer.stub.sh  run-report.ps1  run-report.sh
tds_reporter/src/: app.cpp  app.h  logging.cpp  logging.h  main.cpp  tds_client.cpp  text_utils.cpp  text_utils.h
tds_reporter/templates/: client_funding_risk_report.html
tds_reporter/tests/: report_tests.cpp  tds_reporter_tests.cpp
tds_reporter/tests/data/: stub_snapshot.csv
tds_web/: AGENTS.md  build.gradle  settings.gradle
tds_web/docs/operations/: tds-web-runbook.md
tds_web/docs/product/: initial-requirements.md
tds_web/docs/technical/: tds-native-integration-reference.md
tds_web/jenkins/: Jenkinsfile  Jenkinsfile.pr  Jenkinsfile.release  tds_web_common.groovy
tds_web/openspec/changes/define-tds-native-query-api/: design.md  proposal.md  tasks.md
tds_web/src/main/resources/: application-dev.yml  application-prod.yml  application-qa.yml  application.yml
tds_web/src/main/resources/static/: app.js  index.html  styles.css
tds_web/src/native/: CMakeLists.txt  tds_adapter.cpp
(+83 files in other folders)
